welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: Missing closing brace `}' assumed here
def move(nbPas:Int,versLAvant:Boolean) {if (versLAvant) {for (compteur <- 1 to nbPas) {avance()}} else {for (compteur <- 1 to nbPas) {recule()}} 
^Program:2: error: expected class or object definition
def move(nbPas:Int,versLAvant:Boolean) {if (versLAvant) {for (compteur <- 1 to nbPas) {avance()}} else {for (compteur <- 1 to nbPas) {recule()}} 
^